v0.0.1/modules/schema/pages/class/NonConformLoadSchedule.adoc
= `NonConformLoadSchedule`
:toclevels: 4


+++An active power (Y1-axis) and reactive power (Y2-axis) schedule (curves) versus time (X-axis) for non-conforming loads, e.g., large industrial load or power station service (where modelled).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NonConformLoadSchedule`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]
*** xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]
**** xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]
***** *`NonConformLoadSchedule`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
NonConformLoadSchedule {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



NonConformLoadGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DayType {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Season {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





RegularTimePoint {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




NonConformLoadSchedule -> NonConformLoadGroup: NonConformLoadGroup


NonConformLoadSchedule -> DayType: DayType


NonConformLoadSchedule -> Season: Season



NonConformLoadSchedule -> RegularTimePoint: TimePoints


NonConformLoadSchedule -> DiagramObject: DiagramObjects


NonConformLoadSchedule -> InstanceSet: InstanceSet


NonConformLoadSchedule -> Name: Names


NonConformLoadSchedule -> ChangeSetMember: PropertiesCIMDataObject


NonConformLoadSchedule -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<NonConformLoadGroup,`NonConformLoadGroup`>>
| 1
| xref::class/NonConformLoadGroup.adoc[`NonConformLoadGroup`]
| +++The NonConformLoadGroup where the NonConformLoadSchedule belongs.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<TimePoints,`TimePoints`>>
| 1..*
| xref::class/RegularTimePoint.adoc[`RegularTimePoint`]
| +++The regular interval time point data values that define this schedule.+++

| <<DayType,`DayType`>>
| 0..1
| xref::class/DayType.adoc[`DayType`]
| +++DayType for the Schedule.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<Season,`Season`>>
| 0..1
| xref::class/Season.adoc[`Season`]
| +++Season for the Schedule.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<endTime,`endTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The time for the last time point.  The value can be a time of day, not a specific date.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<startTime,`startTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The time for the first time point.  The value can be a time of day, not a specific date.+++

| <<timeStep,`timeStep`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++The time between each pair of subsequent regular time points in sequence order.+++

| <<value1Multiplier,`value1Multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value1.+++

| <<value1Unit,`value1Unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value1 units of measure.+++

| <<value2Multiplier,`value2Multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value2.+++

| <<value2Unit,`value2Unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value2 units of measure.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DayType]
=== `DayType`
+++DayType for the Schedule.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SeasonDayTypeSchedule.DayType`
| Cardinality
| 0..1
| Type
| xref::class/DayType.adoc[`DayType`]

| Inherited from
| xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#endTime]
=== `endTime`
+++The time for the last time point.  The value can be a time of day, not a specific date.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.endTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#NonConformLoadGroup]
=== `NonConformLoadGroup`
+++The NonConformLoadGroup where the NonConformLoadSchedule belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NonConformLoadSchedule.NonConformLoadGroup`
| Cardinality
| 1
| Type
| xref::class/NonConformLoadGroup.adoc[`NonConformLoadGroup`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Season]
=== `Season`
+++Season for the Schedule.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SeasonDayTypeSchedule.Season`
| Cardinality
| 0..1
| Type
| xref::class/Season.adoc[`Season`]

| Inherited from
| xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]


|===

//[discrete]
[#startTime]
=== `startTime`
+++The time for the first time point.  The value can be a time of day, not a specific date.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TimePoints]
=== `TimePoints`
+++The regular interval time point data values that define this schedule.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.TimePoints`
| Cardinality
| 1..*
| Type
| xref::class/RegularTimePoint.adoc[`RegularTimePoint`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

//[discrete]
[#timeStep]
=== `timeStep`
+++The time between each pair of subsequent regular time points in sequence order.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.timeStep`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

//[discrete]
[#value1Multiplier]
=== `value1Multiplier`
+++Multiplier for value1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#value1Unit]
=== `value1Unit`
+++Value1 units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#value2Multiplier]
=== `value2Multiplier`
+++Multiplier for value2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

//[discrete]
[#value2Unit]
=== `value2Unit`
+++Value2 units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===


