v1.1.0/modules/schema/pages/class/NonConformLoadSchedule.adoc
= `NonConformLoadSchedule`
:toclevels: 4


+++An active power (Y1-axis) and reactive power (Y2-axis) schedule (curves) versus time (X-axis) for non-conforming loads, e.g., large industrial load or power station service (where modelled).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NonConformLoadSchedule`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]
*** xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]
**** xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]
***** *`NonConformLoadSchedule`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<NonConformLoadGroup,`NonConformLoadGroup`>>
//| [[slots_table.NonConformLoadGroup]]<<NonConformLoadGroup,`NonConformLoadGroup`>>
| 1 +
xref::class/NonConformLoadGroup.adoc[`NonConformLoadGroup`]
| +++The NonConformLoadGroup where the NonConformLoadSchedule belongs.+++
| _n/a_

| <<DayType,`DayType`>>
//| [[slots_table.DayType]]<<DayType,`DayType`>>
| 0..1 +
xref::class/DayType.adoc[`DayType`]
| +++DayType for the Schedule.+++
| xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]

| <<Season,`Season`>>
//| [[slots_table.Season]]<<Season,`Season`>>
| 0..1 +
xref::class/Season.adoc[`Season`]
| +++Season for the Schedule.+++
| xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]

| <<TimePoints,`TimePoints`>>
//| [[slots_table.TimePoints]]<<TimePoints,`TimePoints`>>
| 1..* +
xref::class/RegularTimePoint.adoc[`RegularTimePoint`]
| +++The regular interval time point data values that define this schedule.+++
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]

| <<endTime,`endTime`>>
//| [[slots_table.endTime]]<<endTime,`endTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The time for the last time point.  The value can be a time of day, not a specific date.+++
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]

| <<timeStep,`timeStep`>>
//| [[slots_table.timeStep]]<<timeStep,`timeStep`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++The time between each pair of subsequent regular time points in sequence order.+++
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]

| <<startTime,`startTime`>>
//| [[slots_table.startTime]]<<startTime,`startTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The time for the first time point.  The value can be a time of day, not a specific date.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value1Multiplier,`value1Multiplier`>>
//| [[slots_table.value1Multiplier]]<<value1Multiplier,`value1Multiplier`>>
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value1.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value1Unit,`value1Unit`>>
//| [[slots_table.value1Unit]]<<value1Unit,`value1Unit`>>
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value1 units of measure.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value2Multiplier,`value2Multiplier`>>
//| [[slots_table.value2Multiplier]]<<value2Multiplier,`value2Multiplier`>>
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for value2.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<value2Unit,`value2Unit`>>
//| [[slots_table.value2Unit]]<<value2Unit,`value2Unit`>>
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Value2 units of measure.+++
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#DayType]
=== `DayType`
+++DayType for the Schedule.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SeasonDayTypeSchedule.DayType`
| Cardinality
| 0..1
| Type
| xref::class/DayType.adoc[`DayType`]

| Inherited from
| xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]


|===

////
[.text-left]
--
<<slots_table.DayType,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#endTime]
=== `endTime`
+++The time for the last time point.  The value can be a time of day, not a specific date.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.endTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.endTime,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#NonConformLoadGroup]
=== `NonConformLoadGroup`
+++The NonConformLoadGroup where the NonConformLoadSchedule belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:NonConformLoadSchedule.NonConformLoadGroup`
| Cardinality
| 1
| Type
| xref::class/NonConformLoadGroup.adoc[`NonConformLoadGroup`]


|===

////
[.text-left]
--
<<slots_table.NonConformLoadGroup,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Season]
=== `Season`
+++Season for the Schedule.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SeasonDayTypeSchedule.Season`
| Cardinality
| 0..1
| Type
| xref::class/Season.adoc[`Season`]

| Inherited from
| xref::class/SeasonDayTypeSchedule.adoc[`SeasonDayTypeSchedule`]


|===

////
[.text-left]
--
<<slots_table.Season,&#10548;>>
--
////


//[discrete]
[#startTime]
=== `startTime`
+++The time for the first time point.  The value can be a time of day, not a specific date.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.startTime,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TimePoints]
=== `TimePoints`
+++The regular interval time point data values that define this schedule.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.TimePoints`
| Cardinality
| 1..*
| Type
| xref::class/RegularTimePoint.adoc[`RegularTimePoint`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.TimePoints,&#10548;>>
--
////


//[discrete]
[#timeStep]
=== `timeStep`
+++The time between each pair of subsequent regular time points in sequence order.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RegularIntervalSchedule.timeStep`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RegularIntervalSchedule.adoc[`RegularIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.timeStep,&#10548;>>
--
////


//[discrete]
[#value1Multiplier]
=== `value1Multiplier`
+++Multiplier for value1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value1Multiplier,&#10548;>>
--
////


//[discrete]
[#value1Unit]
=== `value1Unit`
+++Value1 units of measure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value1Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value1Unit,&#10548;>>
--
////


//[discrete]
[#value2Multiplier]
=== `value2Multiplier`
+++Multiplier for value2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value2Multiplier,&#10548;>>
--
////


//[discrete]
[#value2Unit]
=== `value2Unit`
+++Value2 units of measure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BasicIntervalSchedule.value2Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/BasicIntervalSchedule.adoc[`BasicIntervalSchedule`]


|===

////
[.text-left]
--
<<slots_table.value2Unit,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/NonConformLoadGroup.adoc[`NonConformLoadGroup`] | xref::class/NonConformLoadGroup.adoc#NonConformLoadSchedules[`NonConformLoadSchedules`]


|===

